[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/play-button-hover.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/tap-bird-1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/play-button-normal.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/play-button-pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/rate-button-pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/CUBE.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sprites/ui/rate-button-normal.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ui/rate-button-hover.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/music.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/click.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="InputEventScreenTouch" id=2]

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.486275, 0.886275, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 175.0
margin_bottom = 315.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 170.0
margin_bottom = 291.0
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 170.0
margin_bottom = 110.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Flappy
Bird"
align = 1

[node name="Space" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 170.0
margin_bottom = 162.0
text = "

"

[node name="Play" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 71.0
margin_top = 166.0
margin_right = 98.0
margin_bottom = 181.0
size_flags_horizontal = 4
size_flags_vertical = 0
shortcut = SubResource( 3 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 170.0
margin_bottom = 199.0

[node name="TapBird" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 170.0
margin_bottom = 239.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Rate" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_left = 71.0
margin_top = 295.0
margin_right = 98.0
margin_bottom = 310.0
size_flags_horizontal = 4
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 9 )

[node name="TapBirdTimer" type="Timer" parent="."]
autostart = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Rate" to="." method="_on_Rate_pressed"]
[connection signal="timeout" from="TapBirdTimer" to="." method="_on_TapBirdTimer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
